--- a/feedbackgen/core/templates/core/index.html
+++ b/feedbackgen/core/templates/core/index.html
@@ -1,106 +1,271 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-  <style>
-     body {
-      box-sizing: border-box;
-      margin:0; 
-    }
+	<head>
+		<meta charset="UTF-8" />
+		<title>Onboarding Page</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="images/icon-logo.PNG"
+		/>
+		<link rel="stylesheet" href="static/style.css" />
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v6.2.1/css/all.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
+	</head>
 
-    main {
-      display: flex;
-    }
+	<body>
+		<header>
+			<nav>
+				<img class="logo" src="images/logo.png" />
+				<div class="links">
+					<a href="#" target="_blank">Home</a>
+					<a href="#" target="_blank">Features</a>
+					<a href="#" target="_blank">Templates</a>
+					<a href="#" target="_blank">Pricing</a>
+					<a href="#" target="_blank">FAQ</a>
+				</div>
+				<div class="btn-links">
+					<button class="sign-in">Sign in</button>
+					<button class="sign-up">Sign Up</button>
+				</div>
+			</nav>
+		</header>
 
-    .sidebar {
-      flex-basis: 290px; 
-      background-color: #DBDFFD;
-    }
+		<section id="info">
+			<article>
+				<div class="page-info">
+					<h1>New and intuitive ways to collect data with online forms</h1>
+					<p>
+						Create forms, customise to fit your brand, share ore embed them. We
+						do the heavy lifting for you while you focus on your buisness
+					</p>
+					<button class="free-signup">Sign up for free</button>
+				</div>
+				<div class="small-samples">
+					<div class="register">
+						<div class="blank"></div>
+						<div class="blank"></div>
+						<div class="blank"></div>
+						<button>Register</button>
+					</div>
+					<div class="stars">
+						<div class="blank"></div>
+						<div class="small-blocks">
+							<div class="blanks"></div>
+							<div class="blanks"></div>
+						</div>
+						<div class="small-blocks">
+							<div class="blanks"></div>
+							<div class="blanks"></div>
+						</div>
 
-    .sidebar-links {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      padding: 8px;
-      margin-bottom: 50px;
-      
-    }
+						<div class="rating">
+							<i class="fa fa-star"></i>
+							<i class="fa fa-star"></i>
+							<i class="fa fa-star"></i>
+							<i class="fa fa-star"></i>
+							<i class="fa fa-star"></i>
+						</div>
+					</div>
+					<div class="login">
+						<div class="blank"></div>
+						<div class="blank"></div>
+						<div class="small-blocks">
+							<div class="blanks"></div>
+							<div class="blanks"></div>
+						</div>
+						<button>sign in</button>
+					</div>
+				</div>
+			</article>
+		</section>
 
-    .sidebar-links a {
-      font-family: 'Poppins';
-      font-style: normal;
-      font-weight: 500;
-      font-size: 24px;
-      line-height: 36px;
-      text-decoration: none;
-      font: #242F9B;
-    }
+		<section id="create">
+			<article>
+				<div class="small-samples">
+					<div class="contact">
+						<p>contact form</p>
+						<div class="blank"></div>
+						<div class="blank"></div>
+						<div class="blank"></div>
+					</div>
+					<div class="feedback">
+						<p>feedback form</p>
+						<div class="blanks"></div>
+						<div class="small-blocks"></div>
+					</div>
+				</div>
+				<div class="create-text">
+					<h1>Create</h1>
+					<h2>Templates you can customize</h2>
+					<p>
+						we have a variety of templates you can customize to suit your brand
+					</p>
+				</div>
+			</article>
+		</section>
 
-    .choose-template-cont {
-      display:flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: flex-start;
-    }
+		<section id="embed">
+			<article>
+				<div class="embed-text">
+					<h1>Embed Form</h1>
+					<h2>Embed your form in your website</h2>
+					<p>
+						Embed your form into your website so you do not have to share a link
+						to get feed back. The forms become part of your website
+					</p>
+				</div>
+				<div class="small-samples">
+					<div class="feedback">
+						<h1>Feedback form</h1>
+						<p>Name</p>
+						<p>Email</p>
+						<p>Message</p>
+						<div class="small-blocks"></div>
+					</div>
+					<div class="embed-icon">
+						<i class="fa fa-link fa-2x"></i>
+					</div>
+					<div class="your-website">
+						<div class="blank"></div>
+						<div class="small-blocks">
+							<div class="blanks"></div>
+							<div class="blanks"></div>
+						</div>
+					</div>
+				</div>
+			</article>
+		</section>
 
-    .choose-template {
-      width: 296px;
-      height: 262px;
-      border: 1px solid black;
-    }
-    
-  </style>
-</head>
-<body>
-  <header>
+		<section id="responses">
+			<article>
+				<div class="small-samples">
+					<div class="notification">
+						<i class="far fa-bell"></i>
+						<p>A response has been recorded</p>
+					</div>
+					<div class="notification pop">
+						<i class="far fa-bell"></i>
+						<p>A response has been recorded</p>
+					</div>
+				</div>
+				<div class="response-text">
+					<h1>Get notification</h1>
+					<h2>Get notification when a response is recorded</h2>
+					<p>
+						get notifications on your dashboard and Email, when your form gets a
+						response. The data is saved to be viewed anytime
+					</p>
+				</div>
+			</article>
+		</section>
 
-  </header>
-  <main>
-    <div class="sidebar">
-      <div class="sidebar-links"><a href="#">My workspace</a></div>
-      <div class="sidebar-links"><a href="#">My templates</a></div>
-      <div class="sidebar-links"><a href="#">Responses</a></div>
-      <div class="sidebar-links"><a href="#">History</a></div>
-    </div>
-    <div class="content">
-      <div>
-        <div>
-          <p>Create new forms</p>
-        </div>
-        <div>
-          <p>Start from scratch</p>
-          <div>
-            BLANK
-          </div>
-        </div>
-        <div>
-          <div>
-            <p>Choose from templates</p><a href="#">see more</a>
-          </div>
-          <div class ="choose-template-cont">
-            <div class="choose-template">
-              We are engaged
-            </div>
-            <div class="choose-template">
-              We are Hiring
-            <div>
-            <div class="choose-template">
-              We need you
-            </div>
-          </div>
-          
-        </div>
-      </div>
+		<section id="learn-more">
+			<button>Learn more</button>
+		</section>
 
-    <div>
-  </main>
-  <footer>
+		<section id="stories">
+			<article>
+				<h1>Our Success stories</h1>
+				<div class="card">
+					<div class="card-1">
+						<img src="images/Airbnb.jpg" class="company-logo" />
+						<p>“the best feedback generation form by far. second to none”</p>
+						<img src="images/Ellipse 5.png" class="avi" />
+						<p>Esther Howard</p>
+						<p>brand manager</p>
+					</div>
+					<div class="card-2">
+						<img src="images/Big_Fish.png" class="company-logo" />
+						<p>
+							“ with feedback_gen, i always know what my customers want and how
+							they feel about our services. and with the embedding of form,
+							customers never have to leave our company’s website”
+						</p>
+						<img src="images/Ellipse 6.png" class="avi" />
+						<p>Brooklyn Simmons</p>
+					</div>
+					<div class="card-3">
+						<img src="images/beazer.png" class="company-logo" />
+						<p>“Best platform for all your form needs”</p>
+						<img src="images/Ellipse 3.png" class="avi" />
+						<p>Guy Hawkins</p>
+						<p>brand manager</p>
+					</div>
+				</div>
+			</article>
+		</section>
 
-  </footer>
-</body>
+		<section id="millions-submitted">
+			<article>
+				<p>Millions of forms submitted</p>
+				<button>Sign up</button>
+			</article>
+		</section>
+
+		<section id="features">
+			<article>
+				<div class="column">
+					<h1>Overview</h1>
+					<p>Online Form</p>
+					<p>Features</p>
+					<p>Pricing</p>
+					<p>Templates</p>
+				</div>
+				<div class="column">
+					<h1>Form features</h1>
+					<p>Edit template</p>
+					<p>Embed</p>
+					<p>get notification</p>
+					<p>save responses</p>
+				</div>
+				<div class="column">
+					<h1>Resources</h1>
+					<p>How it works</p>
+					<p>what's new</p>
+					<p>Examples</p>
+					<p>Blog</p>
+				</div>
+			</article>
+		</section>
+
+		<footer>
+			<div class="last-div">
+				<div class="column">
+					<img src="images/logo.png" class="bottom-icon" />
+					<p>Create your embedded feedback forms</p>
+					<p>
+						<i class="fab fa-facebook"></i>
+						<i class="fab fa-twitter"></i>
+						<i class="fab fa-instagram"></i>
+					</p>
+				</div>
+				<div class="column">
+					<p>Homepage</p>
+					<p>Features</p>
+					<p>Use Cases</p>
+					<p>Integartion</p>
+					<p>Pricing</p>
+				</div>
+				<div class="column">
+					<p>Contact</p>
+					<p>Social Media</p>
+					<p>Terms & Condition</p>
+					<p>Privacy Policy</p>
+				</div>
+				<div class="column">
+					<p>Documentation</p>
+					<p>FAQ</p>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
