--- a/feedbackgen/core/templates/core/pricing.html
+++ b/feedbackgen/core/templates/core/pricing.html
@@ -7,7 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <!-- Using fonts awesome -->
+    <script src="https://kit.fontawesome.com/098387041e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="static/pricing.css">
 
     <title>Pricing Page</title>
 </head>
@@ -16,7 +18,7 @@
 <body>
     <header>
 <!-- THE NAVIGATION -->
-        <img class="logo" src="images/logo.png" alt="logo">
+        <img class="logo" src="images/logo.svg" alt="logo">
         <nav>
             <ul class="nav_links">
                 <li><a href="#">Home</a></li>
@@ -37,12 +39,316 @@
 
     <div class="Header_text"> 
     <h1>Choose the plan that works best for you</h1>
-    <h4>You can cancel anytime.</h4>
+    <h4 class="cancel">You can cancel anytime.</h4>
     </div>
 
-    <!-- THE PRICING CARDS -->
+       <div class="stuff">
+            <ul class="currency">
+                <li class="c">NGN</li>
+                <li class="c">USD</li>
+            </ul>
 
+            <ol class="duration">
+            <li class="d">Monthly</li>
+            <li class="d">Yearly</a></li>
+            </ol>
+        </div>
+
+        <!-- THE PRICING CARDS -->
+        <section id="pricing-cards">  
+
+        <!-- pricing box container -->
+        <div class="price-box-container">
+        <!-- pricing box -->
+            <div class="price-box">
+
+                <!-- box top section -->
+                <div class="top-section">
+                    <!-- plan name -->
+                    <div class="plan-name">
+                        <strong>BASIC</strong>
+                        <strong>#3,000</strong>
+                        <span>/ month billed annually</span>
+                    </div>
+
+                    <!-- Plan Button -->
+                    <button class="ctaB">SIGN UP NOW</button>
+
+                    <!-- Features Section -->
+                    <div class="features-section">
+
+                        <!-- feature-box-1 -->
+                         <div class="feature-box">
+                            <!-- icons -->
+                            <i class="fas fa-check"></i>
+                            <span>1 User</span>
+                         </div>
+
+                         <!-- feature-box-2 -->
+                         <div class="feature-box">
+                            <!-- icons -->
+                            <i class="fas fa-check"></i>
+                            <span>Unlimited</span>
+                         </div>
+
+                         <!-- feature-box-3 -->
+                         <div class="feature-box">
+                            <!-- icons -->
+                            <i class="fas fa-check"></i>
+                            <span>10,000 Responses</span>
+                         </div>
+
+                         <!-- feature-box-4 -->
+                         <div class="feature-box">
+                            <!-- icons -->
+                            <i class="fas fa-check"></i>
+                            <span>Unlimited Reports</span>
+                         </div>
+
+                         <!-- feature-box-5 -->
+                         <div class="feature-box">
+                            <!-- icons -->
+                            <i class="fas fa-check"></i>
+                            <span>500MB Storage</span>
+                         </div>
+
+                         <!-- feature-box-1 -->
+                         <div class="feature-box">
+                            <!-- icons -->
+                            <i class="fas fa-check"></i>
+                            <span>In Built Custom Themes</span>
+                         </div>
+
+
+                    </div>
+
+
+                </div>
+            </div>
+
+
+                <!-- PRICING BOX 2 -->
+                <!-- pricing box container -->
+        <div class="price-box-container">
+            <!-- pricing box -->
+                <div class="price-box">
     
+                    <!-- box top section -->
+                    <div class="top-section">
+                        <!-- plan name -->
+                        <div class="plan-name">
+                            <strong>STANDARD</strong>
+                            <strong>#6,000</strong>
+                            <span>/ month billed annually</span>
+                        </div>
+    
+                        <!-- Plan Button -->
+                        <button class="ctaB">SIGN UP NOW</button>
+    
+                        <!-- Features Section -->
+                        <div class="features-section">
+    
+                            <!-- feature-box-1 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>10 User</span>
+                             </div>
+    
+                             <!-- feature-box-2 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>Unlimited</span>
+                             </div>
+    
+                             <!-- feature-box-3 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>50,000 Responses</span>
+                             </div>
+    
+                             <!-- feature-box-4 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>Unlimited Reports</span>
+                             </div>
+    
+                             <!-- feature-box-5 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>5GB Storage</span>
+                             </div>
+    
+                             <!-- feature-box-1 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>In Built Custom Themes</span>
+                             </div>
+                             
+                             <!-- feature-box-2 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>Remove feedback_gen branding</span>
+                             </div>
+    
+                        </div>
+    
+    
+                    </div>
+                </div>
+
+
+
+                <!-- PRICING BOX 3 -->
+
+                <!-- pricing box container -->
+        <div class="price-box-container">
+            <!-- pricing box -->
+                <div class="price-box">
+    
+                    <!-- box top section -->
+                    <div class="top-section">
+                        <!-- plan name -->
+                        <div class="plan-name">
+                            <strong>PREMIUM</strong>
+                            <strong>#12,000</strong>
+                            <span>/ month billed annually</span>
+                        </div>
+    
+                        <!-- Plan Button -->
+                        <button class="ctaB">SIGN UP NOW</button>
+    
+                        <!-- Features Section -->
+                        <div class="features-section">
+    
+                            <!-- feature-box-1 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>50 User</span>
+                             </div>
+    
+                             <!-- feature-box-2 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>Unlimited</span>
+                             </div>
+    
+                             <!-- feature-box-3 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>100,000 Responses</span>
+                             </div>
+    
+                             <!-- feature-box-4 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>Unlimited Reports</span>
+                             </div>
+    
+                             <!-- feature-box-5 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>10GB Storage</span>
+                             </div>
+    
+                             <!-- feature-box-1 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>In Built Custom Themes</span>
+                             </div>
+                             
+                             <!-- feature-box-2 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>Schedule form close date</span>
+                             </div>
+
+                             <!-- feature-box-2 -->
+                             <div class="feature-box">
+                                <!-- icons -->
+                                <i class="fas fa-check"></i>
+                                <span>Remove feedback_gen branding</span>
+                             </div>
+    
+                        </div>
+    
+    
+                    </div>
+                </div>
+
+                
+            
+        </div>
+</section>
+      
+<div class="Header_text_info"> 
+    <h3>*You can get an additional 50,000 responses +5GB storage for 25,000 annually</h4>
+    </div>
+
+
+    <section class="FAQ">
+
+        <div>
+            <h2 class="Header_text_faq">Frequently Asked Questions</h2>
+        </div>
+
+        <div class="FAQ_Questions">
+            <p class="pFAQ"><a href="#">Can I upgrade my subscription to a higher plan?</a></p>
+            <p class="pFAQ"><a href="#">How do I remove the "powered by feedback_gen" trademark?</a></p>
+            <p class="pFAQ"><a href="#"3>How do I renew my subscription?</a></p>
+            <p class="pFAQ"><a href="#">How do I downgrade my current plan?</a></p>
+        </div> 
+    </section>
+
+
+
+    <!-- FOOTER SECTION  -->
+
+    <footer class="footer">
+        <div class="last-div">
+            <div class="column">
+                <img src="images/logo.svg" class="bottom-icon" />
+                <p>Create your embedded feedback forms</p>
+                <p>
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                </p>
+            </div>
+            <div class="column">
+                <p>Homepage</p>
+                <p>Features</p>
+                <p>Use Cases</p>
+                <p>Integartion</p>
+                <p>Pricing</p>
+            </div>
+            <div class="column">
+                <p>Contact</p>
+                <p>Social Media</p>
+                <p>Terms & Condition</p>
+                <p>Privacy Policy</p>
+            </div>
+            <div class="column">
+                <p>Documentation</p>
+                <p>FAQ</p>
+            </div>
+        </div>
+    </footer>
+
+
 </body>
 
 </html>
