--- a/feedbackgen/core/templates/core/faq.html
+++ b/feedbackgen/core/templates/core/faq.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/faq.css">
     <title>FAQ</title>
 </head>
 <body>
  
     <nav>
-        <a href=""><img src="media/logo.svg" ></a>
+        <a href=""><img src="logo.svg" ></a>
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="">Dashboard</a></li>
