--- a/feedbackgen/core/templates/core/signin.html
+++ b/feedbackgen/core/templates/core/signin.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/signup.css">
+    <link rel="stylesheet" href="/signin.css">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v6.2.1/css/all.css">
 
 </head>
 <body>
     <div class="newuser">
         <ul>
-            <li>Already have an account?</li>
-            <a href=""><li>Login</li></a>
+            <li>New User?</li>
+            <a href=""><li>Sign Up</li></a>
         </ul>
     </div>
     <div class="grid-container">
@@ -22,32 +22,26 @@
             
             <form action="">
             <!-- Headings for the form -->
-            <!-- <div class="headingsContainer">
+            <div class="headingsContainer">
                 <h2>Welcome Back!</h2>
-            </div> -->
+            </div>
 
             <!-- Main container for all inputs -->
             <div class="mainContainer">
                 <!-- Username -->
-                <label for="username">Username</label>
-                <input type="text" placeholder="Choose a username" name="username" required>
+                <label for="username">Email Address</label>
+                <input type="text" placeholder="enter your email or username" name="username" required>
 
                 <br><br>
 
                 <!-- Password -->
                 <label for="pswrd">Password</label>
                 <input type="password" placeholder="enter your password" name="pswrd" required>
-                <br><br>
-
-                <!-- Password -->
-                <label for="pswrd"> Confirm Password</label>
-                <input type="password" placeholder="Re-enter your password" name="pswrd" required>
 
                 <!-- sub container for the checkbox and forgot password link -->
                 <div class="subcontainer">
                     <label>
-                        <input type="checkbox" checked="checked" name="remember">I have read and agreed to the terms and conditions, and privacy policy
-                      </label>
+                        <p class="forgotpsd"> <a href="#">Forgot Password?</a></p>                    </label>
                     
                 </div>
 
@@ -69,10 +63,10 @@
         <div class="grid-child green">
             <div class="content">
                 <p><img src="/images/logo.svg" alt=""></p>
-                <h1>Register for </h1>
-                <h1>free trial</h1>
-                <p>Welcome to Feedback_gen!</p>
-                <p>Register and start your free trial</p>
+                <h1>Sign into </h1>
+                <h1>your account</h1>
+                <p>Welcome back to Feedback _ gen!</p>
+                <p>Sign in to continue</p>
         </div>
       
         </div>
