--- a/feedbackgen/core/templates/core/landing.html
+++ b/feedbackgen/core/templates/core/landing.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -10,7 +11,7 @@
 			sizes="32x32"
 			href="images/landing-images/icon-logo.PNG"
 		/>
-		<link rel="stylesheet" href="static/landing.css" />
+		<link rel="stylesheet" href="{% static 'core/landing.css' %}" />
 		<link
 			rel="stylesheet"
 			href="https://use.fontawesome.com/releases/v6.2.1/css/all.css"
