--- a/feedbackgen/core/templates/core/template.html
+++ b/feedbackgen/core/templates/core/template.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/template.css">
+    <link rel="stylesheet" href="{% static 'core/template.css' %}">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v6.2.1/css/all.css">
 
 </head>
