--- a/feedbackgen/core/templates/core/signin.html
+++ b/feedbackgen/core/templates/core/signin.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +21,8 @@
 
         <div class="grid-child purple">
             
-            <form action="">
+            <form action="" method="POST">
+                {% csrf_token %}
             <!-- Headings for the form -->
             <div class="headingsContainer">
                 <h2>Welcome Back!</h2>
