--- a/feedbackgen/core/templates/core/index.html
+++ b/feedbackgen/core/templates/core/index.html
@@ -36,8 +36,8 @@
 					<a href="#" target="_blank">FAQ</a>
 				</div>
 				<div class="btn-links">
-					<button class="sign-in">Sign in</button>
-					<button class="sign-up">Sign Up</button>
+					<a href="/signin"><button class="sign-in" >Sign in</button></a>
+					<a href="/signup"><button class="sign-up" >Sign Up</button></a>
 				</div>
 			</nav>
 		</header>
