--- a/feedbackgen/core/templates/core/login.html
+++ b/feedbackgen/core/templates/core/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- <!DOCTYPE html> -->
 <html>
 
@@ -5,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link  rel="stylesheet" href="{% static 'core/signin.css' %}" type="text/css" />
 </head>
 <body>
   <header><h1>Login Page</h1></header>
