--- a/feedbackgen/core/templates/core/signin.html
+++ b/feedbackgen/core/templates/core/signin.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/signin.css">
+    <link rel="stylesheet" href="{% static 'core/signin.css' %}">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v6.2.1/css/all.css">
 
 </head>
@@ -20,7 +21,8 @@
 
         <div class="grid-child purple">
             
-            <form action="">
+            <form action="/signin" method="post">
+                {% csrf_token %}
             <!-- Headings for the form -->
             <div class="headingsContainer">
                 <h2>Welcome Back!</h2>
@@ -28,15 +30,18 @@
 
             <!-- Main container for all inputs -->
             <div class="mainContainer">
+
+            
+           
                 <!-- Username -->
-                <label for="username">Email Address</label>
-                <input type="text" placeholder="enter your email or username" name="username" required>
+                <label for="username">UserName</label>
+                <input type="text" placeholder="enter your email or username" name="username" id="username" required>
 
                 <br><br>
 
                 <!-- Password -->
                 <label for="pswrd">Password</label>
-                <input type="password" placeholder="enter your password" name="pswrd" required>
+                <input type="password" placeholder="enter your password" name="pswrd" id="password" required>
 
                 <!-- sub container for the checkbox and forgot password link -->
                 <div class="subcontainer">
@@ -47,7 +52,9 @@
 
 
                 <!-- Submit button -->
-                <button type="submit">Sign In</button>
+                <a ><button type="submit">Sign In</button></a>
+
+            
 
                 <!-- Sign up link -->
                 <!-- <p class="register">Not a member?  <a href="#">Register here!</a></p> -->
