--- a/feedbackgen/core/templates/core/signup.html
+++ b/feedbackgen/core/templates/core/signup.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/signup.css">
+    <link rel="stylesheet"   href="{% static 'core/signup.css' %}" >
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v6.2.1/css/all.css">
 
 </head>
@@ -20,7 +21,8 @@
 
         <div class="grid-child purple">
             
-            <form action="">
+            <form action="" method="post">
+                {% csrf_token %}
             <!-- Headings for the form -->
             <!-- <div class="headingsContainer">
                 <h2>Welcome Back!</h2>
@@ -28,12 +30,20 @@
 
             <!-- Main container for all inputs -->
             <div class="mainContainer">
+                
                 <!-- Username -->
                 <label for="username">Username</label>
                 <input type="text" placeholder="Choose a username" name="username" required>
 
                 <br><br>
 
+                <!-- email -->
+                <label for="email"> Your Email</label>
+                <div class="inputs"><input  type="email" placeholder="Enter your email" name="email" required></div>
+
+                <br><br>
+
+            
                 <!-- Password -->
                 <label for="pswrd">Password</label>
                 <input type="password" placeholder="enter your password" name="pswrd" required>
@@ -41,7 +51,9 @@
 
                 <!-- Password -->
                 <label for="pswrd"> Confirm Password</label>
-                <input type="password" placeholder="Re-enter your password" name="pswrd" required>
+                <input type="password" placeholder="Re-enter your password" name="Confirm_pswrd" required>
+
+           
 
                 <!-- sub container for the checkbox and forgot password link -->
                 <div class="subcontainer">
@@ -53,7 +65,9 @@
 
 
                 <!-- Submit button -->
-                <button type="submit">Sign In</button>
+                <a><button type="submit">Sign In</button></a>
+
+           
 
                 <!-- Sign up link -->
                 <!-- <p class="register">Not a member?  <a href="#">Register here!</a></p> -->
